[package]
name = "poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { git = "https://github.com/AutoMQ/rust-rocksdb.git", branch = "develop", default-features = false, features = [
    "jemalloc",
] }
rand = "0.8.4"
